[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/GameRoom.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/ShipLevel2.gd" type="Script" id=2]

[node name="Level2" type="Node2D" groups=["Level2"]]
script = ExtResource( 2 )

[node name="HangarRoom" parent="." instance=ExtResource( 1 )]
margin_left = -131.0
margin_top = -690.0
margin_right = 133.0
margin_bottom = -476.0
room_name = "el Hangar"

[node name="CapsulasRoom" parent="." instance=ExtResource( 1 )]
margin_left = -200.0
margin_top = -411.0
margin_right = 201.0
margin_bottom = -197.0
room_name = "el Pasillo de las capsulas de escape"

[node name="PasilloRoom" parent="." instance=ExtResource( 1 )]
margin_left = -110.0
margin_top = -113.0
margin_right = 154.0
margin_bottom = 101.0
room_name = "el Pasillo"

[node name="EnfermeriaRoom" parent="." instance=ExtResource( 1 )]
margin_left = -448.0
margin_top = 174.0
margin_right = -184.0
margin_bottom = 388.0
room_name = "la Enfermeria"

[node name="ComunicacionesRoom" parent="." instance=ExtResource( 1 )]
margin_left = 237.0
margin_top = -108.0
margin_right = 524.0
margin_bottom = 106.0
room_name = "la Sala de Comunicaciones"

[node name="TorretasRoom" parent="." instance=ExtResource( 1 )]
margin_left = -121.0
margin_top = 434.0
margin_right = 166.0
margin_bottom = 648.0
room_name = "la Sala de Torretas"

[node name="Ascensor" parent="." instance=ExtResource( 1 )]
margin_left = -465.0
margin_top = -112.0
margin_right = -178.0
margin_bottom = 102.0
room_name = "el Ascensor"

[node name="DormitorioRoom" parent="." instance=ExtResource( 1 )]
margin_left = 227.0
margin_top = 184.0
margin_right = 514.0
margin_bottom = 398.0
room_name = "el Dormitorio"

[node name="MotoresRoom" parent="." instance=ExtResource( 1 )]
margin_left = -129.0
margin_top = 696.0
margin_right = 158.0
margin_bottom = 910.0
room_name = "la Sala de Motores"

[node name="SeguridadRoom" parent="." instance=ExtResource( 1 )]
margin_left = 223.0
margin_top = 439.0
margin_right = 510.0
margin_bottom = 653.0
room_name = "la Sala de Seguridad"

[node name="ControlRoom" parent="." instance=ExtResource( 1 )]
margin_left = -113.0
margin_top = 175.0
margin_right = 174.0
margin_bottom = 389.0
room_name = "la Sala de Control"

[node name="Exclusa" parent="." instance=ExtResource( 1 )]
margin_left = -455.0
margin_top = 438.0
margin_right = -168.0
margin_bottom = 652.0
room_name = "una Exclusa"
room_description = "[Informe] Salida hacia el exterior de la nave.
La habitación cuenta con un sistema de despresurización y un sistema de seguridad que evita que la compuerta exterior se abra mientras la puerta hacia la Sala de Control se encuentra abierta.
Se recomienda colocarse el traje espacial antes de salir al exterior, excepto si eres un droide. (Advertencia aparentemente necesaria)"
